# ImageProcessing

./: .gitignore  CMakeLists.txt  COpenCVDraw.cpp  COpenCVDraw.h  CProcessSeveral.cpp  CProcessSeveral.h  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  README.md  childframe.cpp  childframe.h  childframes.cpp  childframes.h  constants.h  demo.cpp  demo.h  detection.cpp  detection.h  dmath.cpp  dmath.h  filesys.cpp  filesys.h  gridialog.cpp  image_algorithms.cpp  image_editor.cpp  image_gridialog.cpp  image_helper.cpp  image_helper.h  image_humoments.cpp  image_interest_points.cpp  image_interest_points.h  image_io.cpp  image_ml.cpp  image_ml.h  image_python.cpp  image_select.cpp  image_several.cpp  image_sift.cpp  image_slide.cpp  (+24 more)
docs/: CONCLU~1.DOC  O reconhecimento automático de faces1.doc  Processamento de Images.rtf  REL4B.docx  Rel395.doc.docx
gui/: dalog_alog2.fbp  dialog_algo.fbp  dialog_combo.fbp  dialog_double.fbp  dialog_grid.fbp  dialog_image.fbp  dialog_loadimages.fbp  dialog_settings.fbp  dialog_slider.fbp
kernels/: diag_01.dvg  diag_02.dvg  linhas_hor.dvg  linhas_ver.dvg  pass_alta7.dvg  passa_alta.dvg  prewitt_h.dvg  prewitt_v.dvg  robersHort.dvg  robersVert.dvg  sobel_h.dvg  sobel_v.dvg
manual/: doc.md
